--- a/content/video/1.html
+++ b/content/video/1.html
@@ -4,4 +4,4 @@ src_url: https://www.youtube.com/watch?v=3hX5DMFcsCo
 title: Io Sto Bene
 ---
 
-<iframe width="100%"" src="https://www.youtube.com/embed/3hX5DMFcsCo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100" src="https://www.youtube.com/embed/3hX5DMFcsCo" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
