--- a/content/music/4.html
+++ b/content/music/4.html
@@ -6,4 +6,4 @@ tags: Edm,Electro house,Electronica
 title: The Lost Paradise Resort Tape
 ---
 
-<iframe width="100" height="60" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=/al3xf/saturday-evening-live-first-recorded-mix-ever/"></iframe>
+{{< mixcloud "/al3xf/saturday-evening-live-first-recorded-mix-ever/" >}}
