--- a/content/contact.html
+++ b/content/contact.html
@@ -3,12 +3,16 @@ title: "Contact me"
 scripts: [vendor/axios.min.js, contact.js]
 ---
 
-<h1>
-Send me a message, I'll get back to you soon
-</h1>
+<noscript>
+    <header class="error">
+        Please enable JavaScript for this page to make use of this contact form
+    </header>
+</noscript>
+
+<h1>Send me a message, I'll get back to you soon</h1>
 
 <form>
-    <fieldset>
+    <fieldset disabled>
         <label for="inputEmail">Email</label>
         <input type="email" id="inputEmail" placeholder="your@email.here" required>
 
