--- a/content/contact.html
+++ b/content/contact.html
@@ -1,6 +1,6 @@
 ---
 title: "Contact me"
-scripts: [vendor/axios.min.js, contact.js]
+scripts: [vendor/axios.min.js, common.js, contact.js]
 ---
 
 <noscript>
