Update LEI/RON currency

--- a/content/expense.html
+++ b/content/expense.html
@@ -31,8 +31,8 @@ scripts: [vendor/axios.min.js, common.js, expense.js]
             <input type="radio" name="currency" value="USD" class="form-control" id="inputCurrencyUsd" checked>
             <label for="inputCurrencyEur">EUR</label>
             <input type="radio" name="currency" value="EUR" class="form-control" id="inputCurrencyEur">
-            <label for="inputCurrencyLei">LEI</label>
-            <input type="radio" name="currency" value="LEI" class="form-control" id="inputCurrencyLei">
+            <label for="inputCurrencyRon">RON</label>
+            <input type="radio" name="currency" value="RON" class="form-control" id="inputCurrencyRon">
         </div>
 
         <div></div>
