--- a/content/expense.html
+++ b/content/expense.html
@@ -23,7 +23,7 @@ scripts: [vendor/axios.min.js, common.js, expense.js]
         <input type="text" class="form-control" id="inputWhat">
 
         <label for="inputAmount">Amount</label>
-        <input type="text" class="form-control" id="inputAmount">
+        <input type="number" step="0.01" class="form-control" id="inputAmount">
 
         <div>Currency</div>
         <div>
