Add expenses list

--- a/content/expenses/new.html
+++ b/content/expenses/new.html
@@ -1,6 +1,6 @@
 ---
-title: "Expense"
-scripts: [vendor/axios.min.js, common.js, expense.js]
+title: "New Expense"
+scripts: [vendor/axios.min.js, common.js, new_expense.js]
 ---
 
 <noscript>
