Expenses: add hyperlinks

--- a/content/expenses/list.html
+++ b/content/expenses/list.html
@@ -9,7 +9,7 @@ scripts: [vendor/axios.min.js, common.js, list_expenses.js]
     </header>
 </noscript>
 
-<h1>Expenses</h1>
+<h1>Expenses | <a href="/expenses/new/">Add new</a></h1>
 
 <div id="error" hidden></div>
 
