--- a/content/expenses/new.html
+++ b/content/expenses/new.html
@@ -36,6 +36,10 @@ scripts: [vendor/axios.min.js, common.js, new_expense.js]
         </div>
 
         <div></div>
-        <button type="submit" class="send">Send</button>
+
+        <div class="grouper">
+            <button type="submit" class="send">Send</button>
+            <a href="/expenses/list/" class="list">List</a>
+        </div>
     </fieldset>
 </form>
