expenses: add filter

--- a/content/expenses/list.html
+++ b/content/expenses/list.html
@@ -24,6 +24,12 @@ scripts: [vendor/axios.min.js, common.js, list_expenses.js]
                 <label for="to">To</label>
                 <input type="text" id="to"/>
             </th>
+        </tr>
+        <tr>
+            <th>
+                <label for="filter">Filter</label>
+                <input type="text" id="filter"/>
+            </th>
             <th>
                 <label for="password">Password</label>
                 <input type="password" id="password"/>
