expenses: add date selector

--- a/content/expenses/list.html
+++ b/content/expenses/list.html
@@ -18,11 +18,11 @@ scripts: [vendor/axios.min.js, common.js, list_expenses.js]
         <tr>
             <th>
                 <label for="from">From</label>
-                <input type="text" id="from"/>
+                <input type="date" id="from"/>
             </th>
             <th>
                 <label for="to">To</label>
-                <input type="text" id="to"/>
+                <input type="date" id="to"/>
             </th>
         </tr>
         <tr>
