--- a/content/expenses/list.html
+++ b/content/expenses/list.html
@@ -1,6 +1,6 @@
 ---
 title: "List Expenses"
-scripts: [vendor/axios.min.js, common.js, list_expenses.js]
+scripts: [common.js, list_expenses.js]
 ---
 
 <noscript>
