expenses: add date selector

--- a/content/expenses/new.html
+++ b/content/expenses/new.html
@@ -17,7 +17,7 @@ scripts: [common.js, new_expense.js]
         <input type="password" class="form-control" id="inputPassword">
 
         <label for="inputWhen">When</label>
-        <input type="text" class="form-control" id="inputWhen">
+        <input type="date" class="form-control" id="inputWhen">
 
         <label for="inputWhat">What</label>
         <input type="text" class="form-control" id="inputWhat">
