--- a/content/expenses/new.html
+++ b/content/expenses/new.html
@@ -1,45 +1,8 @@
 ---
 title: "New Expense"
 scripts: [common.js, new_expense.js]
+layout: expense
+type: page
+params:
+  currencies: [USD, EUR, DOP, RON]
 ---
-
-<noscript>
-    <header class="error">
-        Please enable JavaScript for this page to make use of this contact form
-    </header>
-</noscript>
-
-<h1>Expense form</h1>
-
-<form>
-    <fieldset disabled>
-        <label for="inputPassword">Password</label>
-        <input type="password" class="form-control" id="inputPassword">
-
-        <label for="inputWhen">When</label>
-        <input type="date" class="form-control" id="inputWhen">
-
-        <label for="inputWhat">What</label>
-        <input type="text" class="form-control" id="inputWhat">
-
-        <label for="inputAmount">Amount</label>
-        <input type="number" step="0.01" class="form-control" id="inputAmount">
-
-        <div>Currency</div>
-        <div>
-            <label for="inputCurrencyUsd">USD</label>
-            <input type="radio" name="currency" value="USD" class="form-control" id="inputCurrencyUsd" checked>
-            <label for="inputCurrencyEur">EUR</label>
-            <input type="radio" name="currency" value="EUR" class="form-control" id="inputCurrencyEur">
-            <label for="inputCurrencyRon">RON</label>
-            <input type="radio" name="currency" value="RON" class="form-control" id="inputCurrencyRon">
-        </div>
-
-        <div></div>
-
-        <div class="grouper">
-            <button type="submit" class="send">Send</button>
-            <a href="/expenses/list/" class="list">List</a>
-        </div>
-    </fieldset>
-</form>
