expenses: add currency flags

--- a/content/expenses/new.html
+++ b/content/expenses/new.html
@@ -4,5 +4,9 @@ scripts: [common.js, new_expense.js]
 layout: expense
 type: page
 params:
-  currencies: [USD, EUR, DOP, RON]
+  currencies:
+  - [USD, 🇺🇸]
+  - [EUR, 🇪🇺]
+  - [DOP, 🇩🇴]
+  - [RON, 🇷🇴]
 ---
