expenses: import from toml

--- a/content/expenses/drafts.html
+++ b/content/expenses/drafts.html
@@ -1,6 +1,6 @@
 ---
 title: "List Drafts"
-scripts: [common.js, list_expenses_common.js, list_expenses_drafts.js]
+scripts: [common.js, currencies.js, list_expenses_common.js, list_expenses_drafts.js]
 ---
 
 <noscript>
