expense: add spinner

--- a/content/expenses/drafts.html
+++ b/content/expenses/drafts.html
@@ -51,3 +51,7 @@ scripts: [common.js, currencies.js, list_expenses_common.js, list_expenses_draft
 <div style="display: flex; justify-content: right; padding: 1rem;">
     <button class="button" id="send">Update</button>
 </div>
+
+<div style="display: flex; justify-content: center;" hidden>
+    <img id="spinner" src="/spinner-icon.jpg"/ style="max-width: 3rem;" hidden>
+</div>
