--- a/content/expenses/list.html
+++ b/content/expenses/list.html
@@ -47,3 +47,7 @@ scripts: [common.js, list_expenses_common.js, list_expenses.js]
     <tbody id="formbody">
     </tbody>
 </table>
+
+<div style="display: flex; justify-content: center;">
+    <img id="spinner" src="/spinner-icon.jpg"/ style="max-width: 3rem; padding-top: 5rem;">
+</div>
