--- a/content/expenses/drafts.html
+++ b/content/expenses/drafts.html
@@ -5,7 +5,7 @@ scripts: [common.js, currencies.js, list_expenses_common.js, list_expenses_draft
 
 <noscript>
     <header class="error">
-        Please enable JavaScript for this page to make use of this contact form
+        Please enable JavaScript for this page to make use of this form
     </header>
 </noscript>
 
