--- a/content/contact.html
+++ b/content/contact.html
@@ -5,7 +5,7 @@ scripts: [common.js, contact.js]
 
 <noscript>
     <header class="error">
-        Please enable JavaScript for this page to make use of this contact form
+        Please enable JavaScript for this page to make use of this form
     </header>
 </noscript>
 
